--- a/homework6part2.html
+++ b/homework6part2.html
@@ -23,8 +23,7 @@
 <h2>Data used for this project</h2>
     <a href="https://github.com/adriennehall8/GISUNC/blob/main/06CensusChoropleth/ACSST5Y2019.S1301_fertility_data.csv"> Link to cleaned csv dataset on GitHub </a>
     <p></p>
-    <a href="https://github.com/adriennehall8/GISUNC/blob/main/06CensusChoropleth/CA_counties.geojson"> Link to geoJSON (4326) on GitHub </a>
-    <a href="https://github.com/adriennehall8/GISUNC/blob/main/06CensusChoropleth/CA_counties.geojson"> Link to geoJSON (102654) on GitHub </a>
+    <a href="https://github.com/rosaliemagner/homework6part2/blob/main/CO_counties_4326.geojson"> Link to geoJSON on GitHub </a>
 
 </body>
 </html>
