--- a/homework6part2.html
+++ b/homework6part2.html
@@ -21,7 +21,7 @@
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
-    <a href="https://github.com/adriennehall8/GISUNC/blob/main/06CensusChoropleth/ACSST5Y2019.S1301_fertility_data.csv"> Link to cleaned csv dataset on GitHub </a>
+    <a href="https://github.com/rosaliemagner/homework6part2/blob/main/ACSST5Y2019.S1401_data_with_overlays_2022-02-23T191210.csv"> Link to cleaned csv dataset on GitHub </a>
     <p></p>
     <a href="https://github.com/rosaliemagner/homework6part2/blob/main/CO_counties_4326.geojson"> Link to geoJSON on GitHub </a>
 
