--- a/homework6part2.html
+++ b/homework6part2.html
@@ -12,12 +12,15 @@
 <a href="Equal Count.png">
     <img src="Equal Count.png" alt="my map" width='800px'>
     </a>
+    <h3>Equal Count CLassification</h3>
 <a href="Natural Breaks.png">
     <img src="Natural Breaks.png" alt="my map" width='800px'>
     </a>
+    <h3>Natural Breaks CLassification</h3>
 <a href="Pretty Breaks.png">
     <img src="Pretty Breaks.png" alt="my map" width='800px'>
     </a>
+    <h3>Pretty Breaks CLassification</h3>
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
