--- a/homework6part2.html
+++ b/homework6part2.html
@@ -9,18 +9,20 @@
 <h1>Homework 6: Census data choropleth </h1>
 <h3>In this assignment students learn to download tabular data from census.data.gov, clean csv data tables, and join tabular data to shapefile data in QGIS. Students are asked to create choropleths of the dataset using 3 different classification modes in QGIS. </h3>
 <!-- Your map goes here -->
+<h2>Equal Count Classification</h2>
+<h3>This classification model separates the data so that there is an equal number of counties in each bracket of data (represented by a different color). This can be useful when trying to get an even distribution of data across the map, 
+    however it does not highlight the disparities in </h3>
 <a href="Equal Count.png">
     <img src="Equal Count.png" alt="my map" width='800px'>
     </a>
-    <h3>Equal Count CLassification</h3>
+<h2>Natural Breaks Classification</h2>
 <a href="Natural Breaks.png">
     <img src="Natural Breaks.png" alt="my map" width='800px'>
     </a>
-    <h3>Natural Breaks CLassification</h3>
+<h2>Pretty Breaks Classification</h2>
 <a href="Pretty Breaks.png">
     <img src="Pretty Breaks.png" alt="my map" width='800px'>
     </a>
-    <h3>Pretty Breaks CLassification</h3>
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
