--- a/homework6part2.html
+++ b/homework6part2.html
@@ -12,13 +12,13 @@
 </h3>
 <!-- Your map goes here -->
 <h2>Equal Count Classification</h2>
-<h3>This classification model separates the data so that there is an equal number of counties in each bracket of data (represented by a different color). This can be useful when trying to get an even distribution of data across the map, 
-    however it does not highlight the disparities in the 18-24 age group college enrollment among the counties.</h3>
+<h3>This classification model separates the data so that there is an equal number of counties in each bracket(represented by a different color). This can be useful when trying to get an even distribution of data across the map, 
+    however, it does not highlight the disparities in the 18-24 age group college enrollment among the counties.</h3>
 <a href="EqualCount.png">
     <img src="EqualCount.png" alt="my map" width='800px'>
     </a>
 <h2>Natural Breaks Classification</h2>
-<h3>This classification method separates the data in a way that more appropriately shows the differences in the college enrollment of the county. This is a better suited method than equal count for my purpose of displaying what counties have significantly higher enrollment rates.</h3>
+<h3>This classification method separates the data in a way that more appropriately shows the differences in the college enrollment of the counties. This is a better suited method than equal count for my purpose of displaying what counties have significantly higher enrollment rates.</h3>
 <a href="Natural Break.png">
     <img src="Natural Break.png" alt="my map" width='800px'>
     </a>
