literally one comma

--- a/homework6part2.html
+++ b/homework6part2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Homework 6: Census data choropleth </h1>
-<h3>In this assignment I created a ratio using the field calculator in QGIS, dividing the number of 18–24-year-olds enrolled in college or graduate school by the total number of 18–24-year-olds in the county. I then multiplied this number by 100 to get a percentage.
+<h3>In this assignment, I created a ratio using the field calculator in QGIS, dividing the number of 18–24-year-olds enrolled in college or graduate school by the total number of 18–24-year-olds in the county. I then multiplied this number by 100 to get a percentage.
     The map shows, by county, the percentage of individuals in the 18-24 age group that are enrolled in college or graduate school.
 </h3>
 <!-- Your map goes here -->
